# flashcard-desktop-app

./: .gitignore  Cargo.toml  README.md
flashcard-desktop-app/: .gitignore  Cargo.toml  Trunk.toml  styles.css
flashcard-desktop-app/src/: app.rs  main.rs
flashcard-desktop-app/src-tauri/: Cargo.toml  flashcards.db  tauri.conf.json
flashcard-desktop-app/src-tauri/migrations/: schema.sql
flashcard-desktop-app/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
flashcard-desktop-app/src-tauri/src/db/: buckets.rs  decks.rs  flashcards.rs  media.rs  mod.rs  sessions.rs  settings.rs  topics.rs
flashcard-desktop-app/src/components/: mod.rs  sidebar.rs
flashcard-desktop-app/src/components/icons/: analytics_icon.rs  deck_icon.rs  dots_icon.rs  edit_icon.rs  home_icon.rs  mod.rs  settings_icon.rs  trash_icon.rs
flashcard-desktop-app/src/pages/: analytics.rs  analytics_page.rs  deck_page.rs  deck_view.rs  decks_page.rs  editor.rs  import.rs  mod.rs  settings.rs  settings_page.rs  study.rs  study_page.rs
run/: build.sh
src/: lib.rs  main.rs
src/db/: mod.rs
src/models/: deck.rs  mod.rs
src/ui/: deck_view.rs  flashcard_view.rs  mod.rs
src/utils/: markdown.rs
tests/: markdown_tests.rs  sqlite_tests.rs
