[package]
name = "flashcard-desktop-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "flashcard_desktop_app"
path = "src/lib.rs"

[dependencies]
iced = { version = "0.13.1", features = ["wgpu", "async-std", "tokio"] }
pulldown-cmark = "0.12.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
